august 31st commit

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,7 @@ project:
   type: book
 
 book:
+  page-navigation: true
   title: "Measurement Error"
   author: "Avery Maytin"
   date: "8/27/2024"
