--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
     - index.qmd
     - intro.qmd
     - summary.qmd
+    - summary.qmd
     - references.qmd
 
 bibliography: references.bib
