--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,9 @@ book:
     - index.qmd
     - intro.qmd
     - summary.qmd
-    - summary.qmd
+    - visualization.qmd
+    - initial_modeling.qmd
+    - diagnostics.qmd
     - references.qmd
 
 bibliography: references.bib
