--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
     - visualization.qmd
     - initial_modeling.qmd
     - diagnostics.qmd
+    - add_noise.qmd
     - references.qmd
 
 bibliography: references.bib
